--- a/packages/gatsby-theme-docs/package.json
+++ b/packages/gatsby-theme-docs/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "author": "Aleksandr Tagunov",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "mkdirp": "^1.0.4"
+  }
 }
