--- a/packages/gatsby-theme-docs/package.json
+++ b/packages/gatsby-theme-docs/package.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "gatsby-plugin-mdx": "^1.8.0",
+    "gatsby-source-filesystem": "^2.9.1",
     "mkdirp": "^1.0.4"
   }
 }
