--- a/packages/gatsby-theme-docs/package.json
+++ b/packages/gatsby-theme-docs/package.json
@@ -5,11 +5,15 @@
   "author": "Aleksandr Tagunov",
   "license": "MIT",
   "private": false,
+  
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby-plugin-mdx": "^1.8.0",
+    "gatsby-plugin-theme-ui": "^0.3.5",
     "gatsby-source-filesystem": "^2.9.1",
-    "mkdirp": "^1.0.4"
+    "mkdirp": "^1.0.4",
+    "theme-ui": "^0.3.5"
   }
 }
