--- a/packages/gatsby-theme-docs/package.json
+++ b/packages/gatsby-theme-docs/package.json
@@ -5,7 +5,6 @@
   "author": "Aleksandr Tagunov",
   "license": "MIT",
   "private": false,
-  
   "dependencies": {
     "@emotion/core": "^11.0.0",
     "@mdx-js/mdx": "^1.6.22",
@@ -13,7 +12,9 @@
     "gatsby-plugin-mdx": "^1.8.0",
     "gatsby-plugin-theme-ui": "^0.3.5",
     "gatsby-source-filesystem": "^2.9.1",
+    "mdx-utils": "^0.2.0",
     "mkdirp": "^1.0.4",
+    "prism-react-renderer": "^1.1.1",
     "theme-ui": "^0.3.5"
   }
 }
