--- a/sites/honkify/package.json
+++ b/sites/honkify/package.json
@@ -8,20 +8,21 @@
     "develop": "gatsby develop"
   },
   "dependencies": {
-    "@emotion/core": "*",
+    "@emotion/core": "10.1.1",
+    "@emotion/react": "^11.1.4",
     "@mdx-js/mdx": "^1.5.0",
     "@mdx-js/react": "^1.5.0",
     "@theme-ui/prism": "^0.2.40",
+    "emotion": "^11.0.0",
+    "gatsby": "^2.30.3",
     "gatsby-plugin-mdx": "^1.0.46",
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-theme-ui": "^0.2.43",
     "honkify": "^0.2.0",
-    "gatsby": "^2.30.3",
-    
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
-    "theme-ui": "^0.2.43"
+    "theme-ui": "^0.3.5"
   },
   "main": "gatsby-config.js",
   "license": "MIT"
