--- a/sites/negronis/package.json
+++ b/sites/negronis/package.json
@@ -8,9 +8,19 @@
     "develop": "gatsby develop"
   },
   "dependencies": {
+    "@jlengstorf/gatsby-theme-events": "^1.0.1",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@theme-ui/presets": "^0.3.5",
     "gatsby": "^2.30.3",
+    "gatsby-image": "^2.10.0",
+    "gatsby-plugin-theme-ui": "^0.3.5",
+    "gatsby-source-filesystem": "^2.10.0",
+    "gatsby-theme-docs": "*",
+    "gatsby-transformer-cloudinary": "^2.1.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "theme-ui": "^0.3.5"
   },
   "main": "gatsby-config.js",
   "license": "MIT"
